fix(sbb-selection-panel): panel content overflow (#2048)

--- a/src/components/sbb-selection-panel/sbb-selection-panel.scss
+++ b/src/components/sbb-selection-panel/sbb-selection-panel.scss
@@ -19,7 +19,6 @@
   --sbb-selection-panel-content-padding-inline: var(--sbb-spacing-responsive-xxs);
   --sbb-selection-panel-content-transition: grid-template-rows
       var(--sbb-selection-panel-animation-duration) var(--sbb-animation-easing),
-    padding var(--sbb-selection-panel-animation-duration) var(--sbb-animation-easing),
     opacity var(--sbb-selection-panel-animation-duration) var(--sbb-animation-easing);
 
   // As the selection panel has always a white/milk background, we have to fix the focus outline color
@@ -65,7 +64,6 @@
   --sbb-selection-panel-content-padding-block-end: var(--sbb-spacing-responsive-xs);
   --sbb-selection-panel-content-transition: grid-template-rows
       var(--sbb-selection-panel-animation-duration) var(--sbb-animation-easing),
-    padding var(--sbb-selection-panel-animation-duration) var(--sbb-animation-easing),
     opacity var(--sbb-selection-panel-animation-duration)
       var(--sbb-selection-panel-animation-duration) var(--sbb-animation-easing);
 }
@@ -98,13 +96,14 @@
   grid-template-rows: var(--sbb-selection-panel-content-grid-template-rows);
   visibility: var(--sbb-selection-panel-content-visibility);
   opacity: var(--sbb-selection-panel-content-opacity);
-  padding-inline: var(--sbb-selection-panel-content-padding-inline);
-  padding-block-end: var(--sbb-selection-panel-content-padding-block-end);
   transition: var(--sbb-selection-panel-content-transition);
 }
 
 .sbb-selection-panel__content {
   overflow: hidden;
+  padding-inline: var(--sbb-selection-panel-content-padding-inline);
+  padding-block-end: var(--sbb-selection-panel-content-padding-block-end);
+  transition: padding var(--sbb-selection-panel-animation-duration) var(--sbb-animation-easing);
 }
 
 sbb-divider {
